# floodlight

./: .env.example  .gitignore  DEPLOYMENT.md  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt  update_categories.py
.do/: app.yaml
.github/: copilot-instructions.md
app/: admin.py  models.py  urls.py  views.py
app/management/commands/: production_setup.py  seed_data.py
app/migrations/: 0001_initial.py  0002_alter_category_options_category_category_type_and_more.py  0003_disaster_affected_areas_disaster_severity.py
app/templates/app/: base.html  disaster_detail.html  disasters_list.html  home.html  map_view.html  need_detail.html  needs_list.html  problems_list.html  resource_detail.html  resources_list.html  services_list.html
project/: asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
