[project]
name = "floodlight"
version = "0.1.0"
description = "Disaster response crowdsourcing platform for coordinating relief efforts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
    "pillow>=11.3.0",
    "gunicorn>=22.0.0",
    "whitenoise>=6.6.0",
    "dj-database-url>=2.1.0",
    "python-decouple>=3.8",
]
